manifests/nginx-service.yaml
###############################################################
# manifests/nginx-service.yaml
# ClusterIP Service (accessed via Ingress)
###############################################################
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: default
  labels:
    app: nginx
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
